kubernetes/apps/extras/default/mqtt/app/tcp-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-gateway
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "${MQTT_LB_IP}"
      lbipam.cilium.io/sharing-key: "${LAN_SHARING_KEY:=mqtt}"
      lbipam.cilium.io/sharing-cross-namespace: "${LAN_SHARING_CROSS_NAMESPACE:=mqtt}"
  listeners:
  - name: mqtt-tcp
    protocol: TCP
    port: 1883
    allowedRoutes:
      kinds:
      - kind: TCPRoute
