kubernetes/apps/extras/default/mqtt/app/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mqtt
spec:
  parentRefs:
    - name: tcp-gateway
      namespace: mqtt
      sectionName: mqtt-tcp
  rules:
    - backendRefs:
        - name: mosquitto
          namespace: mqtt
          port: 1883
